--- a/index.html
+++ b/index.html
@@ -11,54 +11,265 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
+    <style>
+      .sub {
+        padding-left: 15px;
+      }
+    </style>
   </head>
   <body>
     <div class="wrapper">
       <header>
-        <h1>EcoSIS</h1>
+        <h1>EcoSIS API</h1>
         <p>Ecological Spectral Information System (EcoSIS)</p>
 
         <p class="view"><a href="https://github.com/CSTARS/esis">View the Project on GitHub <small>CSTARS/esis</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/CSTARS/esis/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/CSTARS/esis/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="http://ecospectra.org">EcoSIS <strong>Search</strong></a></li>
+          <li><a href="http://data.ecospectra.org">EcoSIS <strong>Data</strong></a></li>
           <li><a href="https://github.com/CSTARS/esis">View On <strong>GitHub</strong></a></li>
         </ul>
+
+          
+        <div><a href="#find-dataset">Find Datasets</a></div>
+        <div class="sub">
+          <div><a href="#find-dataset-filters">Filters Parameter</a></div>
+          <div><a href="#find-dataset-examples">Examples</a></div>
+          <div><a href="#find-dataset-response">Response</a></div>
+        </div>
+        <div><a href="#get-dataset">Get Dataset</a></div>
+        <div><a href="#get-spectra">Get Spectra</a></div>
+        <div class="sub">
+          <div><a href="#get-spectra-parameters">Parameter</a></div>
+          <div><a href="#get-spectra-response">Response</a></div>
+        </div>
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        
+<h2>
+  <a id="overview" class="anchor" href="#overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Overview
+</h2>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>The purpose of this page is to demonstrate the EcoSIS API (Application Programming Interface) and how it can be used to develop 3rd applications and tools using EcoSIS.  The EcoSIS API is a <a href="http://rest.elkstein.org/" target="_blank">REST</a> based API with all calls happening over HTTP.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>The EcoSIS API is broken into four parts:</p>
+  <ul>
+    <li><a href="#find-datasets">Find Datasets</a></li>
+    <li><a href="#get-dataset">Get Dataset</a></li>
+    <li><a href="#get-spectra">Get Spectra</a></li>
+    <li>Download Spectra</li>
+  </ul>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>A Sample API call would look like this:</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<pre><code>curl http://ecospectra.org/rest/query?text=&filters=[]&start=0&end=6</code></pre>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<p>This would return return the first six datasets in ecosis</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h2><a id="find-datasets" class="anchor" href="#find-datasets" aria-hidden="true"><span class="octicon octicon-link"></span></a>Find Datasets</h2>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<p>The EcoSIS API allows you to search and find datasets by filtering datasets based on attribute names as well as free text search.  Much like you would while shopping for shoes online, the EcoSIS API allows you to specify the at you would like spectra of, say, Category = Dicot or Organization = CSTARS.</p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<h4>Dataset Search Path</h4>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<p>The path for the dataset search is <b>/rest/query</b>.</p>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<h4>Dataset Search Request Parameters</h4>
+
+<p>HTTP requests can provide query parameters, similar to passing inputs to a function.  HTTP query paramters start at ? in the url and ar followed by & after.  Ex: /rest/query?arg1=value1&arg2=value2.  The EcoSIS dataset search has the following parameters:</p>
+
+<ul>
+  <li><b>text</b> - the free text query (String)</li>
+  <li><b>filters</b> - the array of filters (<a href="http://json.org" target="_blank">JSON</a>)</li>
+  <li><b>start</b> - the start index of the response (int)</li>
+  <li><b>stop</b> - the stop index of the response (int)</li>
+</ul>
+
+<h5>text</h5>
+<p>The <b>text</b> parameter is exactly the same as entering text into the search text box at <a href="http://ecospectra.org" target="_blank">EcoSIS Search</a>.  You can enter any free text you wish for this field or you can leave it blank.</p>
+
+<h5 id="find-dataset-filters">filters</h5>
+
+<p>The <b>filters</b> parameter is the heart of the EcoSIS API.  The filters parameters is also the most complex.  At it's core, the filter paramter is a JSON array of objects.  These JSON objects can be any <a href="http://docs.mongodb.org/manual/tutorial/query-documents/" target="_blank">MongoDB query</a>.  The array of query objects will then be <b>and</b> together.  Don't worry, you don't need to learn the entire MongoDB query document (though you can if you want), learning the simple attribute match will allow you to make 90% of the queries the <a href="http://ecospectra.org" target="_blank">EcoSIS Search</a> does.  A attribute match object looks like:</p>  
+
+<pre><code>[{ 
+  Category: "Dicot"
+}]</code></pre>
+
+<p>Which says, return all datasets where <b>Category</b> matches <b>Dicot</b>.  Or to match <b>Category</b> = <b>Dicot</b> AND <b>Organization</b> = <b>CSTARS</b>:</p>
+
+<pre><code>[{ 
+  Category: "Dicot"
+},{ 
+  Organization: "CSTARS"
+}]</code></pre>
+
+<p>Note for those new to JSON.  {} = object, [] = array.  So [{},{},{}] is an array of three empty objects.</p>
+
+<p>Note for implementation.  You must escape JSON when you provide it to the url.  The url component escaping spec is <a href="http://tools.ietf.org/html/rfc3986" target="_blank">here</a> and it's complex!  Use whatever language you are writing in escape method(s) to do this for you!  Here is an example of creating a filter query in JavaScript:
+
+<pre><code>var query = [{ 
+  Category: "Dicot"
+},{ 
+  Organization: "CSTARS"
+}];
+
+// turn JavaScript object into JSON string
+query = JSON.strinify(query);
+
+// escape for url component (query)
+query = encodeURIComponent(query);
+
+var restUrl = 'http://ecospectra.org?text=&filter='+query+'&start=0&stop=6';</code></pre>
+
+<h5>start</h5>
+
+<p>The <b>start</b> index is the offset that should be used for the response result set.  A query can match hundreds of items and the size of the HTTP response would be very large and cumbersome if you don't filter it down.  So if you just want the first 10 items, you would set start = 0, stop = 10.</p>
+
+<h5>stop</h5>
+
+<p>The <b>stop</b> index minus the <b>start</b> index tells how many items to return.  So if you want items 20 - 30, you would say start = 20, stop = 30.</p>
+
+<h4 id="find-dataset-examples">Dataset Search Examples</h4>
+
+<p>EcoSIS dataset query examples are easy to find.  Simply go to <a href="http://ecospectra.org">EcoSIS Search</a> and perform a query.  At the very bottom of the page you will see a 'Rest Link' anchor tag and under it, the actual textual representation of the link (not escaped).  You can click the click to see the raw JSON response feed.  The EcoSIS API is not just an addition to help third party developers, it powers EcoSIS itself.  So anything the search interface is doing, you can do.  And many of the API calls used to perform the action (such as search for a dataset) are respresented in the search interface.</p>
+
+<h4 id="find-dataset-response">Dataset Search Response</h4>
+
+<p>The responses for the EcoSIS API will also be JSON.  The dataset search response has the following attributes</p>
+
+<ul>
+  <li><b>total</b> - the total number of datasets matching the query (int)</li>
+  <li><b>start</b> - the start index for the response (int)</li>
+  <li><b>stop</b> - the stop index for the response (int)</li>
+  <li><b>items</b> - Array of dataset search objects (JSON Array)</li>
+  <li><b>filters</b> - additional filters for this search (JSON Object)</li>
+</ul>
+
+<h5>Dataset Search Object</h5>
+
+<p>The <b>items</b> array is an array of dataset search objects.  These objects represent a dataset with a sumation of all the spectra within that datasets unquie attribute values.  What that means,  every attribute in the response object (except two) are JSON array's of strings.  These strings are all the unquie values for that attribute in the dataset.  Ex: A dataset has the attribute 'Scientific Name' so the response object would contain the attribute 'Scientific Name' with all the unquie values for 'Scientific Name' returned in the response object:</p>
+
+
+<pre><code>{
+  ...
+  Scientific Name: [
+    "Acer rubrum",
+    "Pinus resinosa",
+    "Pinus strobus",
+    "Quercus rubra",
+    "Abies balsamea",
+    "Picea rubens",
+    "Tsuga canadensis"
+  ],
+  ...
+}</code></pre>
+
+<p>The dataset search object will also contain:</p>
+
+<ul>
+  <li><b>ecosis</b> - additional dataset information including: title, organization, keyword, spectra count, etc</li>
+  <li><b>_id</b> - The unquie EcoSIS ID for this dataset.</li>
+</ul>
+
+<h5>Dataset Search Additional Filters</h5>
+
+<p>Each query returns additional filters in the <b>filters</b> attribute.  The filters object are the primary filters used on the left hand side of the EcoSIS Search interface.   You can use these filters as suggestions to help further narrow your search.
+
+<h2><a id="get-dataset" class="anchor" href="#get-dataset" aria-hidden="true"><span class="octicon octicon-link"></span></a>Get Datasets</h2>
+
+<p>Once you have found a dataset using the <a href="#find-dataset">Find Dataset</a> query, you can use the datasets ID (see <a href="#find-dataset-response">Dataset Search Response</a> item._id or item.ecosis.package_id paramters) to access a dataset directly.  The query only has one parameter, <b>_id</b>.
+
+<h4>Get Dataset Path</h4>
+
+<p>The Rest path to get a dataset search object is: <b>/rest/get</b></p>
+
+<h4>Get Dataset Example</h4>
+
+<pre><code>curl http://ecospectra.org/rest/get?_id=[dataset ID here]</code></pre>
+
+<h4>Get Dataset Response</h4>
+
+<p>The get dataset response is the same response object returned in the items array of the find query: <a href="#find-dataset-response">Dataset Search Response</a>.</p>
+
+
+
+
+<h2>
+  <a id="get-spectra" class="anchor" href="#get-spectra" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+  Get Spectra
+</h2>
+
+<p>Once you have found a dataset you can access spectra from within the dataset.  Additionally you can filter spectra within the dataset itself.</p>
+
+<h4>Get Spectra Path</h4>
+
+<p>The Rest path for the Get Spectra call is: <b>/rest/getSpectra</b></p>
+
+<h4 id="get-spectra-parameters">Get Spectra Parameters</h4>
+
+<p>The Get Spectra call takes the following paramters</p>
+
+<ul>
+  <li><b>package_id</b> - The unquie package ID (string)</li>
+  <li><b>index</b> - the index of the spectra you wish to access (int)</li>
+  <li><b>filters</b> - the array of filters (JSON) (optional)</li>
+</ul>
+
+<h5>package_id</h5>
+
+<p>The unquie dataset ID for the dataset you are accessing</p>
+
+<h5>index</h5>
+
+<p>The spectra's <b>index</b> within the package.  As EcoSIS contains no unquie identifier, this index allows you to access spectra as though datasets simply contain arrays of spectra.  This array will change size based on the <b>filters</b> parameter.
+
+<h5>filters</h5>
+
+<p>The <b>filters</b> parameter lets filter down the result set of spectra you are accessing via the <b>index</b> attribute.  The filters paramter is formatted the same and works the same are the <a href="#find-dataset-filters">Find Dataset Filter Parameter</a>.  Only instead of filtering key/value pairs based on attributes in a dataset, you are filtering on individual spectra metadata.</p>
+
+<h4 id="get-spectra-response">Get Spectra Response</h4>
+
+<p>The response object for the Get Spectra query has the following attributes:</p>
+
+<ul>
+  <li><b>index</b> - the current index of the spectra you are accessing</li>
+  <li><b>total</b> - the number of spectra in the result set (this will change based on filters provied)</li>
+  <li>
+      <b>item</b> - the spectra response object (standard parameters):<br />
+
+      <ul>
+        <li><b>_id</b> - UID for the spectra.  Note, this ID is not persistant, it's changed everytime the dataset is pushed to search.</li>
+        <li><b>ecosis</b> - object containing ecosis dataset information</li>
+        <li><b>datapoints</b> - array of objects each containing:<br >
+          <ul>
+            <li><b>key</b> - the datapoint attribute name, most likely a numberic wavelength</li>
+            <li><b>value</b> - the value for the key</li>
+            <li><b>units</b> - units for the attribute (optional)</li>
+          </ul>
+        </li>
+      </ul>
+  </li>
+</ul>
+
+<p>As along with the standard <b>_id</b>, <b>ecosis</b> and <b>datapoints</b> parameters, the response object.item sends back all of the metadata included with the spectra.</p>
+
+<p>Couple notes.  The values of the datapoints are always returned as strings.  This is both improve system performance and work around the complexity of handling floats.  It will be up to each client interacting with EcoSIS to decide how it wants to parse and handle floating point values.</p>
+
+
+
+
+<h3><a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+
+<p>Justin Merz (<a href="https://github.com/jrmerz" class="user-mention">@jrmerz</a>)</p>
+
+
+
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/CSTARS">CSTARS</a></p>
